stylus/app.styl
.mynavspacer
  height 70px
  
.mybottomspacer
  height 30px
  
.myerrorspacer
  height 30px
  
.mysmallspacer
  height 5px
  
.uppercase
  text-transform uppercase
  
.textright
  text-align right

.textcentre
  text-align center
  
tr.drillable, span.clickable
  cursor pointer
  
p.input-group
  margin 0px
  
a.navbar-brand-img
  padding 0px
  
.container.navbar-container
  padding 0px 5px
  
footer.navbar-default.navbar-fixed-bottom
  padding 5px 0
 
.checkbox input[type=checkbox]
  height 20px
  width 20px
  margin 0px
  
label.checkbox
  margin-bottom 0px
  padding-top 7px
  
.iqx-input-group
  width 100%
  
.iqx-multi-select
  height auto
  min-height 34px
  cursor pointer

.iqx-multi-select[disabled]
  cursor pointer
  
form > footer.navbar-default
  margin-bottom:46px
    
.footerText
  display:block
  visibility:visible
  color:#b2dbfb !important
  font-size:13px !important
  float:none !important
  padding:0px !important
  line-height:15px !important
  height:20px !important
  padding-top:5px !important
  text-align:center
  
@media screen and (max-width: 767px)
  .navbar-nav
    margin: 50px -15px
  
  .webFooter
    display:none
    visibility:hidden
    
  form > footer.navbar-default
    margin-bottom:0px

